@@ -1,3 +1,8 @@
+19 September 2007
+	Added HMemberM
+	Optimized record projection in Record.hs. The optimization
+	should be especially noticeable for record narrowing.
+
 13 September 2007
 	Added UnionSymRec, the symmetric union of two records. The code
 	is not very optimal though.
